[tool.poetry]
name = "image-reading-data-and-reporting"
version = "0.1.0"
description = "Image reading analysis workspace"
authors = ["samw-nhs <sam.walsh6@nhs.net>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
streamlit = "^1.41.1"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
